Convert to Cliqq

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "loginservice",
+  "name": "cliqq.io",
   "private": true,
   "hexo": {
-    "version": "3.7.1"
+    "version": "3.9.0"
   },
   "scripts": {
     "start": "hexo server",
@@ -23,6 +23,7 @@
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.1",
+    "minimist": "1.2.3",
     "request": "^2.85.0"
   },
   "devDependencies": {
