--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ language:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://loginservice.io
+url: https://cliqq.io
 root: /
 permalink: :year/:month/:day/:title/
 tag_dir: tags
@@ -138,7 +138,7 @@ offline:
 ## Docs: http://zespia.tw/hexo/docs/deployment.html
 deploy:
   type: git
-  repository: git@github.com:tooltwist/loginservice.io.git
+  repository: git@github.com:tooltwist/cliqq.io.git
   branch: gh-pages
   ignore_hidden: false
 
