--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,9 @@ language:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://cliqq.io
-root: /
+zurl: https://cliqq.io
+url: https://tooltwist.github.io
+root: /cliqq.io
 permalink: :year/:month/:day/:title/
 tag_dir: tags
 archive_dir: archives
